# walkk

./: .gitignore  CMakeLists.txt  README.md
include/: audio_file.h  pa_sink.h  walkk.h  wav_writer.h
src/: audio_file.cpp  gui_main.cpp  main.cpp  noiser.hpp  pa_sink.cpp  ui.hpp  walkk.cpp  wav_writer.cpp
